# RAG-N

./: README.md  concord_diagram.html
concord/: README.md  SYSTEM_DIAGRAMS.html  SYSTEM_DOCUMENTATION.html
concord/backend/: .env.example  action_executor.py  adjudicator.py  agent.py  api.py  conflict_detector.py  curator_agent.py  database_agent.py  embed_records.py  escalation_reviewer.py  identity_agent.py  identity_matcher.py  knowledge_base.py  llm_interface.py  notification_agent.py  prescription_agent.py  pyproject.toml  query_agent.py  rag_retriever.py  registration_agent.py  router_agent.py
concord/backend/concord_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
concord/db/: 01_schema.sql  02_seed.sql  03_match_function.sql  04_knowledge_base.sql  05_notifications.sql
concord/frontend/: package-lock.json  package.json
concord/frontend/app/: page.tsx
